# linux-for-applications-2023

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  test_1  test_1.cor  test_2  test_2.cor
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  remove.c  tests
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  configure.ac  guess.c  guess.po
09_PatchDiff/: Makefile  maze.c  patch1  patch2  patch3
